--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -100,7 +100,7 @@
     .image-background{
       position: relative;
       .bg{
-        height: 1140px;
+        height: 100vh;
         width: 100%;
         object-fit: cover;
       }
@@ -141,6 +141,7 @@
     img{
       display: block!important;
       width: 75%;
+      max-width: 300px;
     }
     p{
       width: 100%!important;
